[gd_scene load_steps=18 format=3 uid="uid://bgquvsp071dlk"]

[ext_resource type="PackedScene" uid="uid://n7fng75ly2c0" path="res://minigames/miniGame.tscn" id="1_rsgde"]
[ext_resource type="Script" path="res://minigames/SleepMiniGame/Scripts/SleepMiniGame.gd" id="2_47m6i"]
[ext_resource type="PackedScene" uid="uid://cn3ocb5am37kc" path="res://minigames/SleepMiniGame/Scenes/sleep_mob.tscn" id="3_usvvl"]
[ext_resource type="PackedScene" uid="uid://c1ojwd46o4sgx" path="res://minigames/SleepMiniGame/Scenes/slow_mob_object.tscn" id="5_3q8cf"]
[ext_resource type="PackedScene" uid="uid://cey2d2eb0um08" path="res://minigames/SleepMiniGame/Scenes/freeze_object.tscn" id="5_6wiqu"]
[ext_resource type="PackedScene" uid="uid://dfljyu3ha0ovk" path="res://minigames/SleepMiniGame/Scenes/super_bomb.tscn" id="7_jkftu"]
[ext_resource type="PackedScene" uid="uid://cge26o77wc0ss" path="res://minigames/SleepMiniGame/Scenes/cursor_bomb.tscn" id="7_o723i"]
[ext_resource type="Texture2D" uid="uid://dwul1r8oflfpf" path="res://graphics/smoothLight.tres" id="8_pg66s"]
[ext_resource type="FontFile" uid="uid://v642onk0wmuw" path="res://fonts/vcrosdmonorusbyd.ttf" id="9_btjs6"]
[ext_resource type="PackedScene" uid="uid://bk8plnok35xqd" path="res://minigames/SleepMiniGame/Scenes/heal_pack.tscn" id="10_sw3eh"]
[ext_resource type="Texture2D" uid="uid://rct7kw8mb633" path="res://graphics/SleepMiniGame/BadBomzh.png" id="10_u4brs"]
[ext_resource type="Texture2D" uid="uid://bnqs8yy44fsrs" path="res://graphics/SleepMiniGame/Zletter.png" id="11_lwhhr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gu3r"]
size = Vector2(156, 68)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_iqeha"]
emission_shape = 1
emission_sphere_radius = 10.0
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 75.0
gravity = Vector3(0, -50, 0)
initial_velocity_min = 1.0
initial_velocity_max = 15.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_gcavx"]
vertices = PackedVector2Array(895, 0, 890, 648, 244, 648, 248, 8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(248, 8, 244, 648, 890, 648, 895, 0)])

[sub_resource type="Curve2D" id="Curve2D_bi7l8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 262, 191, 0, 0, 0, 0, 347, 40, 0, 0, 0, 0, 760, 28, 0, 0, 0, 0, 862, 186)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_ssl1j"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 161, -46, 0, 0, 0, 0, 913, -70)
}
point_count = 2

[node name="SleepMiniGame" instance=ExtResource("1_rsgde")]
process_mode = 0
script = ExtResource("2_47m6i")
cursor_damage = 50
mob_speed = 200.0
mob_scene = ExtResource("3_usvvl")
objects_scenes = Array[PackedScene]([ExtResource("5_6wiqu"), ExtResource("5_3q8cf"), ExtResource("7_jkftu"), ExtResource("7_o723i"), ExtResource("10_sw3eh")])
score = 0
health_points = 100.0
mob_prop_scale = 1.0
action = 1
action_type = 1

[node name="Sprite2D" type="Sprite2D" parent="." index="0"]
position = Vector2(556, 295)
scale = Vector2(7.64634, 6.48781)
texture = ExtResource("8_pg66s")

[node name="Homeless" type="Area2D" parent="." index="1"]
position = Vector2(550, 550)

[node name="Sprite2D" type="Sprite2D" parent="Homeless" index="0"]
texture_filter = 1
scale = Vector2(4.16, 4.88)
texture = ExtResource("10_u4brs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Homeless" index="1"]
shape = SubResource("RectangleShape2D_4gu3r")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Homeless" index="2"]
texture_filter = 1
position = Vector2(-65, -37)
amount = 3
sub_emitter = NodePath(".")
process_material = SubResource("ParticleProcessMaterial_iqeha")
texture = ExtResource("11_lwhhr")
trail_enabled = true
trail_sections = 2
trail_section_subdivisions = 10

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="." index="2"]
navigation_polygon = SubResource("NavigationPolygon_gcavx")

[node name="MobTimer" type="Timer" parent="." index="3"]
autostart = true

[node name="ObjectTimer" type="Timer" parent="." index="4"]
wait_time = 6.0
autostart = true

[node name="Path2D" type="Path2D" parent="." index="5"]
curve = SubResource("Curve2D_bi7l8")

[node name="MobPath" type="PathFollow2D" parent="Path2D" index="0"]
position = Vector2(262, 191)
rotation = -1.05809

[node name="Path2D2" type="Path2D" parent="." index="6"]
curve = SubResource("Curve2D_ssl1j")

[node name="ObjectsPath" type="PathFollow2D" parent="Path2D2" index="0"]
position = Vector2(161, -46)
rotation = -0.0319041

[node name="ScoreLabel" type="Label" parent="." index="7"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -117.0
offset_top = -91.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("9_btjs6")
theme_override_font_sizes/font_size = 80
text = "0"

[node name="HPBar" type="ProgressBar" parent="." index="8"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -26.0
offset_right = 241.0
grow_vertical = 0
step = 1.0
value = 100.0

[connection signal="body_entered" from="Homeless" to="." method="take_damage"]
[connection signal="timeout" from="MobTimer" to="." method="spawn_mob"]
[connection signal="timeout" from="ObjectTimer" to="." method="spawn_objects"]
